--- a/civcraft_data/data/war.yml
+++ b/civcraft_data/data/war.yml
@@ -157,3 +157,25 @@ warcamp:
 
     # maximum number of war camps a civ can have.
     max: 1
+
+cannon:
+    # template for deployable cannon
+    template: cannon
+
+    # amount of blocks to destroy per shot
+    yield: 4.0
+
+    # TNT cost, number of TNT blocks it costs per shot.
+    tnt_cost: 10
+
+    # Number of seconds between shots.
+    cooldown: 30
+
+    # Amount of HP each cannon has
+    hitpoints: 10
+
+    # Amount of damage done to PLAYERS when hit by a blast
+    player_damage: 200
+
+    # Amount of damage d one to STRUCTURES when hit by a blast
+    structure_damage: 30
