--- a/civcraft/.classpath
+++ b/civcraft/.classpath
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/bukkit-1.7.2-R0.2.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/dhutils.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/Herochat.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/ServerStatusUpdater.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/TagAPI.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/Vault.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/VanishNoPacket.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/ProtocolLib-2.7.1-SNAPSHOT.jar"/>
@@ -20,10 +18,12 @@
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/BarAPI.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/craftbukkit-1.7.2-R0.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource_beta7_2/lib/remoteentities-1.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/MobLib_trunk/MobLib.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource_beta7_2/lib/spigot-1.7.2-R0.3-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource_beta7_2/lib/json.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource_beta7_2/lib/bukkit-1.7.5-R0.1-20140324.183156-3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource_beta7_2/lib/craftbukkit-1.7.5-R0.1-20140326.094445-8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource_beta7_2/lib/spigot-1.7.5-R0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ryan/civcraft/civcraftsource/lib/TagAPI.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
