PvPTimer/Market/Materials
PvPTimer Listener and flags
Market - remove sulphur
Materials - Added tier before item name to find it easier in res book.
Removed TNT tech requirement.

--- a/civcraft_data/data/civ.yml
+++ b/civcraft_data/data/civ.yml
@@ -19,6 +19,8 @@ global:
         - '345:1'
         - 'mat_tutorial_book:1'
 
+   pvp_timer: 30   
+
    # Regen spawn at midnight every day.
    regen_spawn_hour: 0
 
