--- a/civcraft/src/config.yml
+++ b/civcraft/src/config.yml
@@ -1,10 +1,32 @@
-#
-# CivCraft Configuration file. Mostly just system stuff, balancing info is in the data
-# directory. 
-#
-#
+# ======================================================================
+# CivCraft Configuration File.
+# ======================================================================
 
-# MySQL database settings
+
+# =========================== civcraft.net Server Listing Service (SLS) =========================
+
+# Set if you want to use civcraft.net's server listing service (SLS). By setting this to true
+# the civcraft plugin will send your server's information to civcraft.net so players can find
+# your server while looking for civcraft servers to play on.
+use_server_listing_service: 'true'
+
+# IP address or URL of your server. The SLS will use this to inform users how to connect to your server.
+# if left blank, the SLS will attempt to obtain it automatically from packets sent to the SLS.
+server_address: ""
+
+# Name of your server which will appear on civcraft.net, will be clipped to 64 characters.
+server_name: 'CivCraft'
+
+# Timezone hint that will tell users what timezone your server is in. This will help them join
+# servers that are in their own timezone.
+server_timezone: 'PST'
+
+# A short message to display on civcraft.net to advertise your server or explain what it's about.
+server_description: 'Just another CivCraft server.'
+
+# ============================== Database Configuration ====================================
+
+# MySQL database to store game data in across reloads. 
 mysql:
    hostname: localhost
    port: '3306'
@@ -36,8 +58,6 @@ perk_database:
     max_conns: '10'
     parts: '3'
 
-server_name: 'civcraft'
-server_timezone: 'PST'
 server_phase: 'beta8'
 
  
