- Added option to disable civcraft anti-cheat. - Fixed missing show recipe not working (forgot to add class)

--- a/civcraft/data/nocheat.yml
+++ b/civcraft/data/nocheat.yml
@@ -11,6 +11,7 @@ nocheatplus:
 
 civcraft_ac_version: '1'
 civcraft_ac_key: 'FGAZFWAQ'
+civcraft_ac_enabled: 'true'
 
 valid_mods:
     - name: 'CivCraft Anti-Cheat'
